--- a/Covenant/Data/Tasks/GhostPack.yaml
+++ b/Covenant/Data/Tasks/GhostPack.yaml
@@ -10,6 +10,7 @@
   CompatibleDotNetVersions:
   - Net35
   - Net40
+  - Net472
   Code: |
     using System;
     using System.IO;
@@ -119,7 +120,26 @@
     CompatibleDotNetVersions:
     - Net35
     - Net40
+    - Net472
     ReferenceAssemblies:
+    - Name: System.IdentityModel.dll
+      Location: net472\System.IdentityModel.dll
+      DotNetVersion: Net472
+    - Name: System.dll
+      Location: net472\System.dll
+      DotNetVersion: Net472
+    - Name: System.DirectoryServices.dll
+      Location: net472\System.DirectoryServices.dll
+      DotNetVersion: Net472
+    - Name: System.DirectoryServices.AccountManagement.dll
+      Location: net472\System.DirectoryServices.AccountManagement.dll
+      DotNetVersion: Net472
+    - Name: System.Core.dll
+      Location: net472\System.Core.dll
+      DotNetVersion: Net472
+    - Name: mscorlib.dll
+      Location: net472\mscorlib.dll
+      DotNetVersion: Net472
     - Name: System.IdentityModel.dll
       Location: net40\System.IdentityModel.dll
       DotNetVersion: Net40
@@ -159,6 +179,7 @@
     EmbeddedResources: []
   ReferenceAssemblies: []
   EmbeddedResources: []
+
 - Name: SharpDPAPI
   Aliases: []
   Description: Use a SharpDPAPI command.
@@ -171,6 +192,7 @@
   CompatibleDotNetVersions:
   - Net35
   - Net40
+  - Net472
   Code: |
     using System;
     using System.IO;
@@ -245,7 +267,20 @@
     CompatibleDotNetVersions:
     - Net35
     - Net40
+    - Net472
     ReferenceAssemblies:
+    - Name: System.Security.dll
+      Location: net472\System.Security.dll
+      DotNetVersion: Net472
+    - Name: System.dll
+      Location: net472\System.dll
+      DotNetVersion: Net472
+    - Name: System.Core.dll
+      Location: net472\System.Core.dll
+      DotNetVersion: Net472
+    - Name: mscorlib.dll
+      Location: net472\mscorlib.dll
+      DotNetVersion: Net472
     - Name: System.Security.dll
       Location: net40\System.Security.dll
       DotNetVersion: Net40
@@ -279,6 +314,7 @@
     EmbeddedResources: []
   ReferenceAssemblies: []
   EmbeddedResources: []
+
 - Name: SharpUp
   Aliases: []
   Description: Use a SharpUp command.
@@ -291,6 +327,7 @@
   CompatibleDotNetVersions:
   - Net35
   - Net40
+  - Net472
   Code: |
     using System;
     using System.IO;
@@ -365,7 +402,23 @@
     CompatibleDotNetVersions:
     - Net35
     - Net40
+    - Net472
     ReferenceAssemblies:
+    - Name: System.ServiceProcess.dll
+      Location: net472\System.ServiceProcess.dll
+      DotNetVersion: Net472
+    - Name: System.Management.dll
+      Location: net472\System.Management.dll
+      DotNetVersion: Net472
+    - Name: System.dll
+      Location: net472\System.dll
+      DotNetVersion: Net472
+    - Name: System.Core.dll
+      Location: net472\System.Core.dll
+      DotNetVersion: Net472
+    - Name: mscorlib.dll
+      Location: net472\mscorlib.dll
+      DotNetVersion: Net472
     - Name: System.ServiceProcess.dll
       Location: net40\System.ServiceProcess.dll
       DotNetVersion: Net40
@@ -405,6 +458,7 @@
     EmbeddedResources: []
   ReferenceAssemblies: []
   EmbeddedResources: []
+
 - Name: SharpDump
   Aliases: []
   Description: Use a SharpDump command.
@@ -417,6 +471,7 @@
   CompatibleDotNetVersions:
   - Net35
   - Net40
+  - Net472
   Code: |
     using System;
     using System.IO;
@@ -511,7 +566,17 @@
     CompatibleDotNetVersions:
     - Net35
     - Net40
+    - Net472
     ReferenceAssemblies:
+    - Name: System.dll
+      Location: net472\System.dll
+      DotNetVersion: Net472
+    - Name: System.Core.dll
+      Location: net472\System.Core.dll
+      DotNetVersion: Net472
+    - Name: mscorlib.dll
+      Location: net472\mscorlib.dll
+      DotNetVersion: Net472
     - Name: System.dll
       Location: net40\System.dll
       DotNetVersion: Net40
@@ -533,6 +598,7 @@
     EmbeddedResources: []
   ReferenceAssemblies: []
   EmbeddedResources: []
+
 - Name: Seatbelt
   Aliases: []
   Description: Use a Seatbelt command.
@@ -545,6 +611,7 @@
   CompatibleDotNetVersions:
   - Net35
   - Net40
+  - Net472
   Code: |
     using System;
     using System.IO;
@@ -707,7 +774,32 @@
     CompatibleDotNetVersions:
     - Net35
     - Net40
+    - Net472
     ReferenceAssemblies:
+    - Name: System.Web.Extensions.dll
+      Location: net472\System.Web.Extensions.dll
+      DotNetVersion: Net472
+    - Name: System.ServiceProcess.dll
+      Location: net472\System.ServiceProcess.dll
+      DotNetVersion: Net472
+    - Name: System.Management.dll
+      Location: net472\System.Management.dll
+      DotNetVersion: Net472
+    - Name: System.dll
+      Location: net472\System.dll
+      DotNetVersion: Net472
+    - Name: System.DirectoryServices.dll
+      Location: net472\System.DirectoryServices.dll
+      DotNetVersion: Net472
+    - Name: System.Windows.Forms.dll
+      Location: net472\System.Windows.Forms.dll
+      DotNetVersion: Net472
+    - Name: System.Core.dll
+      Location: net472\System.Core.dll
+      DotNetVersion: Net472
+    - Name: mscorlib.dll
+      Location: net472\mscorlib.dll
+      DotNetVersion: Net472
     - Name: System.Web.Extensions.dll
       Location: net40\System.Web.Extensions.dll
       DotNetVersion: Net40
